--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
 
     <!--Main content-->
     <string name="setting">Cài Đặt</string>
-    <string name="toanhoc">Kiến Thức Toán Học</string>
-    <string name="anhvan">Kiến Thức Anh Văn</string>
+    <string name="toanhoc">Ôn Thi THPT - ĐH</string>
+    <string name="anhvan">Ôn Thi THPT - ĐH</string>
     <string name="nguvan">Kiến Thức Ngữ Văn</string>
     <string name="hoahoc">Kiến Thức Hóa Học</string>
     <string name="vatly">Kiến Thức Vật Lý</string>
@@ -15,6 +15,7 @@
     <string name="dialy">Kiến Thức Địa Lý</string>
     <string name="sinhhoc">Kiến Thức Sinh Học</string>
     <string name="toan_10">Toan_10</string>
+    <string name="onthi_document">OnThiTNTHPTDocument</string>
 
     <!--Left menu-->
     <string name="quychethi">Quy chế thi</string>
