--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,12 @@
     <string name="btn_next">NEXT</string>
     <string name="btn_resume">RESUME</string>
     <string name="btn_check">CHECK</string>
+    <string name="msg_not_select_dapan">Bạn phải chọn câu trả lời</string>
+
+    <!--show dialog-->
+    <string name="dialog_info">KẾT QUẢ BÀI LÀM</string>
+    <string name="dialog_sodiem">Số điểm: </string>
+    <string name="dialog_socaudung">Số câu đúng: </string>
+    <string name="dialog_thoigian">Thời gian: </string>
+    <string name="dialog_close">ĐÓNG</string>
 </resources>
