change show answer exam

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="btn_next">NEXT</string>
     <string name="btn_resume">RESUME</string>
     <string name="btn_check">CHECK</string>
+    <string name="btn_close">CLOSE</string>
     <string name="msg_not_select_dapan">Bạn phải chọn câu trả lời</string>
 
     <!--show dialog-->
