dowload data if coneted the internet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="left_mondialy">Địa Lý</string>
     <string name="left_yeuthich">Yêu Thích</string>
     <string name="left_dethi">Đề Thi</string>
+    <string name="left_taidulieu">Tải dữ liệu</string>
     <string name="left_thoat">Thoát</string>
 
     <!-- Infomation of test exam-->
