fix bug show dapan trac nghiem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     <string name="time_180">180 phút</string>
     <string name="time_90">90 phút</string>
     <string name="hinh_thuc_thi">Hình thức thi: </string>
-    <string name="thi_tracnghiem">Trắc ngiệm</string>
+    <string name="thi_tracnghiem">Trắc nghiệm</string>
     <string name="thi_tu_luan">Tự Luận</string>
     <string name="title_cau">Câu</string>
     <string name="dap_an_a">A</string>
